Remove old nested schematics properly